[gd_scene load_steps=2 format=3 uid="uid://recm6iyi4x5u"]

[ext_resource type="Script" path="res://scripts/game_over_mini.gd" id="1_7la0o"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7la0o")

[node name="gameOver" type="Label" parent="."]
layout_mode = 0
offset_left = 321.0
offset_top = 112.0
offset_right = 827.0
offset_bottom = 179.0
theme_override_font_sizes/font_size = 48
text = "You lost the mini game. "

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 176.0
offset_top = 400.0
offset_right = 520.0
offset_bottom = 542.0
theme_override_font_sizes/font_size = 48
text = "Restart
the mini-game"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 650.0
offset_top = 400.0
offset_right = 994.0
offset_bottom = 542.0
theme_override_font_sizes/font_size = 48
text = "Go to main
page"

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 230.0
offset_top = 273.0
offset_right = -673.0
offset_bottom = -330.0
theme_override_font_sizes/font_size = 32
text = "Fun collected: "

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 227.0
offset_top = 210.0
offset_right = -676.0
offset_bottom = -393.0
theme_override_font_sizes/font_size = 32
text = "Coins collected: "

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 665.0
offset_top = 206.0
offset_right = -238.0
offset_bottom = -397.0
theme_override_font_sizes/font_size = 32
text = "Total coins:"

[node name="Label4" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 231.0
offset_top = 335.0
offset_right = -672.0
offset_bottom = -268.0
theme_override_font_sizes/font_size = 32
text = "Health lost:"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
